--- a/package.json
+++ b/package.json
@@ -39,15 +39,18 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "ajv": "^7.2.4",
-    "eslint": "^8.52.0",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.1",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "prettier": "^3.1.0",
-    "prettier-eslint": "^16.1.2",
-    "sass": "^1.77.8"
+    "globals": "^15.12.0",
+    "prettier": "^3.3.3",
+    "prettier-eslint": "^16.3.0",
+    "sass": "^1.77.8",
+    "vue-eslint-parser": "^8.3.0"
   }
 }
